...
            // virtualization[virtualizationSelected],
            platforms[platformSelected],
            locations[locationSelected],
            newServerHardware,
          )
        }>
        <GradientButton text="Continue" />
      </TouchableOpacity>
    </ScrollView>
  );
}
export function Step2({route, navigation}) {
  const [images, setImages] = useState([]);
...
