...
              style={[
                styles.text_footer,
                {
                  marginTop: 10,
                },
              ]}>
              Password
            </Text>
            <View style={styles.action}>
              <TextInput
                placeholder="Your Password"
                mode="outlined"
                theme={{
...
