...
              } else {
                bottomSheetRef.current?.close();
              }
            },
          }}>
          <Tab.Screen
            name="Home"
            component={Dashboard}
            options={{
              tabBarIcon: ({ focused, color, size }) => (
                <HomeIcon color={theme.colors.text} />
              ),
            }}
...
